--- a/vizro-core/src/vizro/static/css/tabs.css
+++ b/vizro-core/src/vizro/static/css/tabs.css
@@ -13,10 +13,14 @@
   height: calc(100% - 3.75rem - var(--tabs-title-height));
 }
 
-
 /* The dbc component adds an additional div element to which we cannot assign a className.
 To ensure the dynamic height adjustment and prevent scrolling, the height must be specified for that div as below. */
 .tab-pane,
 .tab-pane > div:first-child {
+  height: 100%;
+}
+
+.tab-pane > div > .container-fluid .flex-row,
+.tab-pane > div > .container-fluid .flex-row .loading-container {
   height: 100%;
 }
